# Noesis

./: Cargo.toml  README.md
src/lib/: braket.rs  complex.rs  lib.rs
src/lib/chrono_manager/: mod.rs  object_inventory.rs  time.rs
src/lib/render_engine/: box_object.rs  circle_object.rs  mod.rs  object_parent.rs  text_object.rs
